# mujoco_ros2_simulation

./: CMakeLists.txt  README.md  package.xml  pixi.toml
.github/workflows/: ci.yaml
docker/: Dockerfile
docs/: TOOLS.md
include/mujoco_ros2_simulation/: data.hpp  mujoco_cameras.hpp  mujoco_system_interface.hpp
scripts/: make_mjcf_from_robot_description.py  robot_description_to_mjcf.sh
src/: mujoco_cameras.cpp  mujoco_system_interface.cpp
test/: CMakeLists.txt
test/config/: controllers_pid.yaml  mujoco_pid.yaml  test_robot.rviz
test/launch/: test_robot.launch.py  test_robot_pid.launch.py
test/src/: robot_launch_pid_test.py  robot_launch_test.py
test/test_resources/: test_robot.urdf
test/test_resources/test_pid/: scene_pid.xml  test_robot_pid.urdf  test_robot_pid.xml
